--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,3 +16,10 @@ nav.header a{
 nav.header a:hover{
     color: orange;
 }
+.wel-email{
+    color: aquamarine;
+    margin-left: 10px;
+}
+.btn-signout{
+    margin-left: 10px;
+}
